fix: remove scrollbar on highlight overlay

--- a/src/features/text-display/style.css
+++ b/src/features/text-display/style.css
@@ -54,6 +54,7 @@ textarea.text-display__top {
 }
 
 .text-display__highlight-overlay {
+  overflow: hidden;
   color: transparent;
   margin: 1px;
 }
